# quikgrid

./: .gitignore  Makefile  QuikGrid-vc7.sln  QuikGrid-vc9.sln  demo.cpp  gridxtyp.h  qgcapi.cpp  readme.txt  scatdata.cpp  scatdata.h  surfgrid.h  xpand.h
core/: CMakeLists.txt  Makefile  QuikGrid-vc7.vcproj  QuikGrid-vc8.sln  QuikGrid-vc8.vcproj  QuikGrid-vc9.vcproj  SConstruct  contour.cpp  contour.h  demo.cpp  gridxtyp.cpp  installer.py  qgcapi.cpp  surfgrid.cpp  xpand.cpp  xpand.h
python/: setup.py
python/quikgrid/: __init__.py  capi.py  capi_test.py  contours.txt  contours_geom.txt  grid.txt
